--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!--- Home tab -->
       <div id="home" class="tabcontent">
          <p>
-            Kryption is our company name.
+            Kryption is our company's name.
          </p>
          <img src="img/Kryptionred.png" alt="Logo Picture" width="900" height="450">
          <p>
