--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <!---The Company Name --->
       <title>
-         Kryption
+         Kryption - Encryption
       </title>
       <script type="text/javascript" src="scripts/main.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
