--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          <p> Enter secret passphrase </p>
          <input type="text" id="secretpassphrase" value="" />
          <br>
-         <p>Click the encryption button to secure data</p>
+         <p>Click the encryption button to secure your data</p>
          <button onclick="encrypt()">ENCRYPT</button>
          <p>Click the decryption button to decipher the encoded information.</p>
          <button onclick="decrypt()">DECRYPT</button>
